# Ember

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: ember.h
include/ember/: ember.h  rhi.h
include/ember/core/: common.h  handle.h  hash.h  log.h  logger.h  platform.h  pool.h  time.h
include/ember/graphics/: batcher.h  blend.h  color.h  draw_command.h  graphics.h  index_format.h  material.h  mesh.h  render_device.h  render_device_sdl.h  renderer.h  shader.h  sub_texture.h  target.h  texture.h  texture_format.h  uniform_type.h  vertex_format.h  vertex_type.h
include/ember/graphics/sdl/: sdl_render_device.h
include/ember/input/: axes.h  buttons.h  controller.h  gamepad.h  input.h  keyboard.h  keys.h  mouse.h  mouse_buttons.h  virtual_button.h
include/ember/math/: math.h  quad.h  rect.h  vector2.h
include/ember/platform/: window.h
include/ember/platform/vulkan/: buffer.h  command_buffer.h  command_buffer_ring.h  render_device.h  util.h
include/ember/rhi/: rhi.h
include/ember/rhi/vulkan/: buffer.h  buffer_vulkan.h  command_buffer.h  command_buffer_ring.h  render_device.h  shader.h  texture.h  vk_mem_alloc.h  vulkan_util.h
include/ember/system/: window.h
lib/glm/glm/detail/: setup.hpp
lib/glm/test/ext/: ext_matrix_int2x2_sized.cpp  ext_matrix_int2x3_sized.cpp  ext_matrix_int2x4_sized.cpp  ext_matrix_int3x2_sized.cpp  ext_matrix_int3x3_sized.cpp  ext_matrix_int3x4_sized.cpp  ext_matrix_int4x2_sized.cpp  ext_matrix_int4x3_sized.cpp  ext_matrix_int4x4_sized.cpp  ext_matrix_uint2x2_sized.cpp  ext_matrix_uint2x3_sized.cpp  ext_matrix_uint2x4_sized.cpp  ext_matrix_uint3x2_sized.cpp  ext_matrix_uint3x3_sized.cpp  ext_matrix_uint3x4_sized.cpp  ext_matrix_uint4x2_sized.cpp  ext_matrix_uint4x3_sized.cpp  ext_matrix_uint4x4_sized.cpp  ext_scalar_int_sized.cpp  ext_scalar_uint_sized.cpp  ext_vector_int1_sized.cpp  ext_vector_int2_sized.cpp  ext_vector_int3_sized.cpp  ext_vector_int4_sized.cpp  ext_vector_uint1_sized.cpp  ext_vector_uint2_sized.cpp  ext_vector_uint3_sized.cpp  ext_vector_uint4_sized.cpp
lib/glm/test/gtc/: gtc_type_precision.cpp
lib/imgui/backends/: imgui_impl_sdl2.cpp
src/core/: log.cpp  logger.cpp  time.cpp
src/graphics/: batcher.cpp  blend.cpp  color.cpp  draw_command.cpp  material.cpp  mesh.cpp  render_device.cpp  render_device_sdl.cpp  shader.cpp  sub_texture.cpp  target.cpp  texture.cpp
src/graphics/sdl/: sdl_render_device.cpp
src/input/: controller.cpp  input.cpp  keyboard.cpp  mouse.cpp  virtual_axis.cpp  virtual_button.cpp  virtual_stick.cpp
src/platform/: window.cpp
src/platform/vulkan/: buffer.cpp  command_buffer.cpp  command_buffer_ring.cpp  render_device.cpp  vma.cpp
src/rhi/vulkan/: command_buffer.cpp  command_buffer_ring.cpp  render_device.cpp  vk_mem_alloc.cpp
src/system/: window.cpp
